# rusty-pi

./: .gitignore  Cargo.toml  Makefile  README.md  linker.ld
01_blinky/: .gitignore  Cargo.toml  Makefile  README.md  config.txt  linker.ld
01_blinky/src/: boot.S  main.rs
src/: boot.S  main.rs
